changed module category to TestTools

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -27,7 +27,7 @@ Menu/Help/HelpShortcuts/org-netbeans-modules-testtools-mainpage.xml=TestTools Mo
 
 # Module properties:
 OpenIDE-Module-Name: TestTools
-OpenIDE-Module-Display-Category: Tools
+OpenIDE-Module-Display-Category: TestTools
 OpenIDE-Module-Short-Description: XTest, Jemmy and Jelly technology preview module. 
 OpenIDE-Module-Long-Description=Module is intended to show the way to all XTest, Jemmy and JellyTools beginners \
  and help them to create automated tests from scratch. It provides documentation of used technologies. \
