Add tasklist/api to the javadoc build list

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -253,7 +253,8 @@ config.fixedmodules.javadoc=openide, \
         openidex/looks, \
         mdr, \
         vcscore, \
-        xml/api
+        xml/api, \
+	tasklist/api
 config.modules.javadoc=
 
 # configuration for signature test builds
